src/main/default/objects/CVMA_Google_Drive_File__mdt/CVMA_Google_Drive_File__mdt.object-meta.xml
<CustomObject>
    <description>Metadata records for files stored in Google Drive, eliminating Salesforce Developer Edition storage constraints. Each record contains file metadata (~500 bytes) while actual file content lives in Google Drive.</description>
    <label>CVMA Google Drive File</label>
    <pluralLabel>CVMA Google Drive Files</pluralLabel>
</CustomObject>