src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>File category for organization: Bylaws, Forms, Documentation, Photos, Training, Meeting Materials</description>
    <label>Category</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>