src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/CEB_Only__c.field-meta.xml
<CustomField>
    <fullName>CEB_Only__c</fullName>
    <label>CEB Only</label>
    <description>Restrict file access to CEB officers only (Commander, VP, Secretary, Treasurer)</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>