src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>File description for member context (e.g., National bylaws 2025 revision with CEB term limit changes)</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>