src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <description>Sort order for file display in UI (lower numbers appear first)</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>