src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <description>Original filename with extension (e.g., CVMA-Bylaws-2025.pdf)</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>