src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <description>File extension/type: PDF, DOCX, XLSX, JPG, PNG, PPTX</description>
    <label>File Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>