src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/Google_Drive_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_ID__c</fullName>
    <label>Google Drive ID</label>
    <description>Unique Google Drive file identifier (used for API operations)</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>