src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>Active/inactive flag for file visibility (inactive files hidden from members)</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>