src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/Public_Link__c.field-meta.xml
<CustomField>
    <fullName>Public_Link__c</fullName>
    <description>Google Drive shareable link for file viewing/downloading</description>
    <label>Public Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>