src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/Size_MB__c.field-meta.xml
<CustomField>
    <fullName>Size_MB__c</fullName>
    <label>Size (MB)</label>
    <description>File size in megabytes (for display and storage reporting)</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>