src/main/default/objects/CVMA_Google_Drive_File__mdt/fields/Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Date__c</fullName>
    <description>Date file was uploaded to Google Drive</description>
    <label>Uploaded Date</label>
    <type>Date</type>
</CustomField>